Favicon And Basic Setup
Add Favicon Icons

Implement logo and nav-wrapper

--- a/index.html
+++ b/index.html
@@ -4,17 +4,41 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>First SaaS Website</title>
-    <meta name="description" content="">
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./saas-project-assets/project_logo/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./saas-project-assets/project_logo/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./saas-project-assets/project_logo/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="description" content="Empowering teams with the freedom to own unlimited power of web development.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- stylesheets -->
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/responsive.css">
+    <!-- fontawesome icons -->
     <script src="https://kit.fontawesome.com/3f58ffeeb4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    
+    <div class="top-nav">
+      <div class="logo">
+        <img src="./saas-project-assets/project_logo/logo.svg" alt="Front Logo">
+      </div>
+      <div class="nav-wrapper">
+        <nav>
+          <ul>
+            <li>Home</li>
+            <li>Features</li>
+            <li>Learn</li>
+            <li>Pricing</li>
+            <li>Hire Us</li>
+            <li><button>Buy Now</button></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
   </body>
 </html>
