--- a/index.html
+++ b/index.html
@@ -23,21 +23,23 @@
     <script src="https://kit.fontawesome.com/3f58ffeeb4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="top-nav">
-      <div class="logo">
-        <img src="./saas-project-assets/project_logo/logo.svg" alt="Front Logo">
-      </div>
-      <div class="nav-wrapper">
-        <nav>
-          <ul>
-            <li>Home</li>
-            <li>Features</li>
-            <li>Learn</li>
-            <li>Pricing</li>
-            <li>Hire Us</li>
-            <li><button>Buy Now</button></li>
-          </ul>
-        </nav>
+    <div class="container">
+      <div class="top-nav">
+        <div class="logo">
+          <img src="./saas-project-assets/project_logo/logo.svg" alt="Front Logo">
+        </div>
+        <div class="nav-wrapper">
+          <nav>
+            <ul>
+              <li>Home</li>
+              <li>Features</li>
+              <li>Learn</li>
+              <li>Pricing</li>
+              <li>Hire Us</li>
+              <li class="buy-now-btn">Buy Now</li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </div>
   </body>
