--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="container">
       <div class="top-nav">
-        <div class="logo">
+        <div class="company-logo">
           <img src="./saas-project-assets/project_logo/logo.svg" alt="Front Logo">
         </div>
         <div class="nav-wrapper">
@@ -36,11 +36,54 @@
               <li>Learn</li>
               <li>Pricing</li>
               <li>Hire Us</li>
-              <li class="buy-now-btn">Buy Now</li>
             </ul>
+            <div class="btn-primary">Buy Now</div>
           </nav>
         </div>
       </div>
+      <section class="hero">
+        <div class="hero-ad">
+          <div class="hero-header">
+            Empowering teams with the freedom
+          </div>
+          <div class="hero-description">
+            To own unlimited power of web development.
+          </div>
+          <div class="hero-btns">
+            <div class="btn-primary btn-play">
+              <i class="fa-solid fa-circle-play"></i>
+              <div>Play Video</div>
+            </div>
+            <div class="btn-learn">
+              Learn More
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
+          </div>
+        </div>
+        <div class="hero-graphics">
+          <div class="logo google">
+            <div><img src="./saas-project-assets/logo_icons/google.png" alt="google"></div>
+          </div>
+          <div class="logo atlassian">
+            <div><img src="./saas-project-assets/logo_icons/atlassian.png" alt="atlassian"></div>
+          </div>
+          <div class="logo asana">
+            <div><img src="./saas-project-assets/logo_icons/asana.png" alt="asana"></div>
+          </div>
+          <div class="logo paypal">
+            <div><img src="./saas-project-assets/logo_icons/paypal.jpg" alt="paypal"></div>
+          </div>
+          <div class="logo weave">
+            <div><img src="./saas-project-assets/logo_icons/weave.png" alt="weave"></div>
+          </div>
+          <div class="logo google-ads">
+            <div><img src="./saas-project-assets/logo_icons/google-A.png" alt="google ads"></div>
+          </div>
+          <div class="logo calendar">
+            <div><img src="./saas-project-assets/logo_icons/calendar.png" alt="calendar"></div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
