Key Benefits and Get Started
Finish implement key benefits section and hover effect

Unstyled content put in for Get Started section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="https://kit.fontawesome.com/3f58ffeeb4.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    .banner
     <div class="container">
       <div class="top-nav">
         <div class="company-logo">
@@ -56,7 +57,7 @@
             </div>
             <div class="btn-learn">
               Learn More
-              <i class="fa-solid fa-chevron-right"></i>
+              <i class="fa-solid fa-chevron-right  fa-xs"></i>
             </div>
           </div>
         </div>
@@ -81,6 +82,96 @@
           </div>
           <div class="logo calendar">
             <div><img src="./saas-project-assets/logo_icons/calendar.png" alt="calendar"></div>
+          </div>
+        </div>
+      </section>
+      <section class="benefits">
+        <div class="benefits-header">
+          <div class="benefits-title">
+            Key Benefits
+          </div>
+          <div class="benefits-description">
+            Design faster with a growing array of beautiful templates
+          </div>
+        </div>
+        <div class="benefits-cards">
+          <div class="benefits-card">
+            <div><img src="./saas-project-assets/icons/responsive.svg" alt="responsive"></div>
+            <div class="card-title">Responsive</div>
+            <div class="card-description">
+              It is a long established 
+              fact that a reader will be 
+              distracted by the readable
+              content of a page when 
+              looking at its layout.
+            </div>
+            <div class="btn-learn">
+              Learn More
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+          <div class="benefits-card">
+            <div><img src="./saas-project-assets/icons/responsive.svg" alt="responsive"></div>
+            <div class="card-title">Responsive</div>
+            <div class="card-description">
+              It is a long established 
+              fact that a reader will be 
+              distracted by the readable
+              content of a page when 
+              looking at its layout.
+            </div>
+            <div class="btn-learn">
+              Learn More
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+          <div class="benefits-card">
+            <div><img src="./saas-project-assets/icons/responsive.svg" alt="responsive"></div>
+            <div class="card-title">Responsive</div>
+            <div class="card-description">
+              It is a long established 
+              fact that a reader will be 
+              distracted by the readable
+              content of a page when 
+              looking at its layout.
+            </div>
+            <div class="btn-learn">
+              Learn More
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+          <div class="benefits-card">
+            <div><img src="./saas-project-assets/icons/responsive.svg" alt="responsive"></div>
+            <div class="card-title">Responsive</div>
+            <div class="card-description">
+              It is a long established 
+              fact that a reader will be 
+              distracted by the readable
+              content of a page when 
+              looking at its layout.
+            </div>
+            <div class="btn-learn">
+              Learn More
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="get-started">
+        <div class="start-wrapper">
+          <div class="start-prompt">
+            <div class="start-prompt-description">
+              Front makes you look at things from a different perspective
+            </div>
+            <div class="btn-primary">
+              Get Started
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
+          </div>
+          <div class="start-banner-wrapper">
+            <div class="start-banner">
+              <img src="./saas-project-assets/banners/banner_one.jpg" alt="software options">
+            </div>
           </div>
         </div>
       </section>
