Fix Cards and Style Get Started
Update content for Key Benefits Cards and adjust padding

Style and finish Get Started Section

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             </div>
           </div>
           <div class="benefits-card">
-            <div><img src="./saas-project-assets/icons/responsive.svg" alt="responsive"></div>
-            <div class="card-title">Responsive</div>
+            <div><img src="./saas-project-assets/icons/customizable.svg" alt="customizable"></div>
+            <div class="card-title">Customizable</div>
             <div class="card-description">
               It is a long established 
               fact that a reader will be 
@@ -126,8 +126,11 @@
             </div>
           </div>
           <div class="benefits-card">
-            <div><img src="./saas-project-assets/icons/responsive.svg" alt="responsive"></div>
-            <div class="card-title">Responsive</div>
+            <div><img src="./saas-project-assets/icons/premium.svg" alt="premium"></div>
+            <div class="premium-wrapper">
+              <div class="card-title">Premium</div>
+              <div class="badge-success">sketch</div>
+            </div>
             <div class="card-description">
               It is a long established 
               fact that a reader will be 
@@ -141,8 +144,8 @@
             </div>
           </div>
           <div class="benefits-card">
-            <div><img src="./saas-project-assets/icons/responsive.svg" alt="responsive"></div>
-            <div class="card-title">Responsive</div>
+            <div><img src="./saas-project-assets/icons/documentation.svg" alt="documentation"></div>
+            <div class="card-title">Documentation</div>
             <div class="card-description">
               It is a long established 
               fact that a reader will be 
@@ -168,10 +171,8 @@
               <i class="fa-solid fa-chevron-right fa-xs"></i>
             </div>
           </div>
-          <div class="start-banner-wrapper">
-            <div class="start-banner">
-              <img src="./saas-project-assets/banners/banner_one.jpg" alt="software options">
-            </div>
+          <div class="start-banner">
+            <img src="./saas-project-assets/banners/banner_one.jpg" alt="software options">
           </div>
         </div>
       </section>
