Why Front Section
Implement and style Why Front Section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <script src="https://kit.fontawesome.com/3f58ffeeb4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    .banner
     <div class="container">
       <div class="top-nav">
         <div class="company-logo">
@@ -173,6 +172,57 @@
           </div>
           <div class="start-banner">
             <img src="./saas-project-assets/banners/banner_one.jpg" alt="software options">
+          </div>
+        </div>
+      </section>
+      <section class="why-front">
+        <div class="why-front-wrapper">
+          <div class="why-header">
+            <div class="why-header-title">
+              Why Front?
+            </div>
+            <div class="why-header-description">
+              Front is an incredibly beautiful, fully responsive, and mobile-first projects
+              on the web - it is the starting point for creative sites.
+            </div>
+          </div>
+          <div class="why-components">
+            <div class="why-component">
+              <div class="why-graphic">
+                <!-- <div class="why-graphic-dot">&#8226;</div> -->
+                <i class="fas fa-circle fa-2xs"></i>
+              </div>
+              <div class="why-name">Basic Elements</div>
+            </div>
+            <div class="why-component">
+              <div class="why-graphic">
+                <!-- <div class="why-graphic-dot">&#8226;</div> -->
+                <i class="fas fa-circle fa-2xs"></i>
+              </div>
+              <div class="why-name">Components</div>
+            </div>
+            <div class="why-component">
+              <div class="why-graphic">
+                <!-- <div class="why-graphic-dot">&#8226;</div> -->
+                <i class="fas fa-circle fa-2xs"></i>
+              </div>
+              <div class="why-name">Combined Components</div>
+            </div>
+            <div class="why-component">
+              <div class="why-graphic">
+                <!-- <div class="why-graphic-dot">&#8226;</div> -->
+                <i class="fas fa-circle fa-2xs"></i>
+              </div>
+              <div class="why-name">Page Layouts</div>
+            </div>
+          </div>
+          <div class="why-banner-wrapper">
+            <div class="why-banner">
+              <img src="./saas-project-assets/banners/banner_two.jpg" alt="banner">
+            </div>
+            <div class="play-graphic">
+              <i class="fa-solid fa-play fa-lg"></i>
+            </div>
           </div>
         </div>
       </section>
