Sections Why Front To Pricing
Implement sections Why Front, Profile, and Companies.
Begin Implement Pricing section.

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </div>
         </div>
       </section>
-      <section class="why-front">
+      <section class="why-front-section">
         <div class="why-front-wrapper">
           <div class="why-header">
             <div class="why-header-title">
@@ -222,6 +222,124 @@
             </div>
             <div class="play-graphic">
               <i class="fa-solid fa-play fa-lg"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="profile-section">
+        <div class="profile-wrapper">
+          <div class="profile-person-wrapper">
+            <div class="person">
+              <img src="./saas-project-assets/people/woman_three.jpg" alt="business person">
+            </div>
+            <div class="dots-graphics">
+              <img src="./saas-project-assets/abstract/dots.svg" alt="dots">
+            </div>
+          </div>
+        </div>
+        <div class="profile-review-wrapper">
+          <div class="profile-company">
+            <img src="./saas-project-assets/company_logos/hubspot.svg" alt="hubspot">
+          </div>
+          <div class="profile-review">
+            The template is really nice and offers quite a 
+            large set of options. It's beautiful and the 
+            coding is done quickly and seamlessly. Thank 
+            you!
+          </div>
+          <div class="profile-signature">
+            <div class="profile-name">Christina Kray</div>
+            <div class="profile-title">Executive Director</div>
+          </div>
+        </div>
+      </section>
+      <section class="companies-section">
+        <div class="companies-header">TRUSTED BY WORLD'S BEST</div>
+        <div class="companies-wrapper">
+          <div class="company">
+            <img src="./saas-project-assets/company_logos/weebly.svg" alt="weebly">
+          </div>
+          <div class="company">
+            <img src="./saas-project-assets/company_logos/uber.svg" alt="uber">
+          </div>
+          <div class="company">
+            <img src="./saas-project-assets/company_logos/slack.svg" alt="slack">
+          </div>
+          <div class="company">
+            <img src="./saas-project-assets/company_logos/airbnb.svg" alt="airbnb">
+          </div>
+          <div class="company">
+            <img src="./saas-project-assets/company_logos/spotify.svg" alt="spotify">
+          </div>
+        </div>
+      </section>
+      <section class="pricing-section">
+        <div class="pricing-header-wrapper">
+          <div class="pricing-header-title">Pricing</div>
+          <div class="pricing-header-description">No additional costs. Pay for what you use</div>
+        </div>
+        <div class="pricing-info-wrapper">
+          <div class="pricing-action-card">
+            <div class="price"><span>59</span> / mo</div>
+            <div class="pricing-description">
+              Start your Front business now. 100%
+              guaranteed money back. No
+              questions asked.
+            </div>
+            <div class="pricing-bottom">
+              <div class="btn-primary btn-play">
+                <div>Get Started</div>
+                <i class="fa-solid fa-chevron-right  fa-xs"></i>
+              </div>
+              <div class="pricing-disclaimer">No credit card required.</div>
+            </div>
+          </div>
+          <div class="pricing-graphics-cards">
+            <div class="pricing-graphics-card">
+              <div class="pricing-graphic">
+                <img src="./saas-project-assets/icons/components.svg" alt="components">
+              </div>
+              <div class="pricing-graphic-title">Hundreds of components</div>
+              <div class="pricing-graphic-info">
+                Achieve maximum productivity
+                with minimum effort with Front
+                and create robust Limitless 
+                products.
+              </div>
+            </div>
+            <div class="pricing-graphics-card">
+              <div class="pricing-graphic">
+                <img src="./saas-project-assets/icons/images.svg" alt="diamond">
+              </div>
+              <div class="pricing-graphic-title">Images included</div>
+              <div class="pricing-graphic-info">
+                Images included. We made 
+                custom license for all our 
+                premium images in Front.
+              </div>
+            </div>
+            <div class="pricing-graphics-card">
+              <div class="pricing-graphic">
+                <img src="./saas-project-assets/icons/cancel.svg" alt="cancel ticket">
+              </div>
+              <div class="success-title">
+                <div class="pricing-graphic-title">Cancel anytime</div>
+                <div class="badge-success">sketch</div>
+              </div>
+              <div class="pricing-graphic-info">
+                If its not for you, just cancel, no
+                hidden costs or fees.
+              </div>
+            </div>
+            <div class="pricing-graphics-card">
+              <div class="pricing-graphic">
+                <img src="./saas-project-assets/icons/moneyback.svg" alt="money back">
+              </div>
+              <div class="pricing-graphic-title">Hundreds of components</div>
+              <div class="pricing-graphic-info">
+                100% guaranteed money back. No 
+                questions asked.
+              </div>
             </div>
           </div>
         </div>
