Hire Us Section
Implement Hire Us Section

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <script src="https://kit.fontawesome.com/3f58ffeeb4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="container">
-      <div class="top-nav">
+      <div class="top-nav container">
         <div class="company-logo">
           <img src="./saas-project-assets/project_logo/logo.svg" alt="Front Logo">
         </div>
@@ -41,7 +40,7 @@
           </nav>
         </div>
       </div>
-      <section class="hero">
+      <section class="hero container">
         <div class="hero-ad">
           <div class="hero-header">
             Empowering teams with the freedom
@@ -84,7 +83,7 @@
           </div>
         </div>
       </section>
-      <section class="benefits">
+      <section class="benefits container">
         <div class="benefits-header">
           <div class="benefits-title">
             Key Benefits
@@ -159,7 +158,7 @@
           </div>
         </div>
       </section>
-      <section class="get-started">
+      <section class="get-started container">
         <div class="start-wrapper">
           <div class="start-prompt">
             <div class="start-prompt-description">
@@ -175,7 +174,7 @@
           </div>
         </div>
       </section>
-      <section class="why-front-section">
+      <section class="why-front-section container">
         <div class="why-front-wrapper">
           <div class="why-header">
             <div class="why-header-title">
@@ -226,7 +225,7 @@
           </div>
         </div>
       </section>
-      <section class="profile-section">
+      <section class="profile-section container">
         <div class="profile-wrapper">
           <div class="profile-person-wrapper">
             <div class="person">
@@ -253,7 +252,7 @@
           </div>
         </div>
       </section>
-      <section class="companies-section">
+      <section class="companies-section container">
         <div class="companies-header">TRUSTED BY WORLD'S BEST</div>
         <div class="companies-wrapper">
           <div class="company">
@@ -273,7 +272,7 @@
           </div>
         </div>
       </section>
-      <section class="pricing-section">
+      <section class="pricing-section container">
         <div class="pricing-header-wrapper">
           <div class="pricing-header-title">Pricing</div>
           <div class="pricing-header-description">No additional costs. Pay for what you use</div>
@@ -344,6 +343,86 @@
           </div>
         </div>
       </section>
-    </div>
+    <section class="hire-section">
+      <div class="hire-testimonial">
+        <div class="hire-title">Hire Us</div>
+        <div class="hire-motto">
+          Whatever your goal - 
+          we will get you there
+        </div>
+        <div class="hire-quote">
+          <em>
+            "I love front! I love the ease of use, I love the
+            fact that I have total creative freedom..."
+          </em>
+        </div>
+        <div class="hire-signature">Charlotte Moore</div>
+        <div class="hire-position">Head of Commercials, Slack</div>
+        <div class="hire-people">
+          <img src="./saas-project-assets/people/woman_one.jpg" alt="woman one">
+          <img src="./saas-project-assets/people/woman_two.jpg" alt="woman two">
+          <img src="./saas-project-assets/people/man_one.jpg" alt="man one">
+        </div>
+      </div>
+      <div class="contact-us">
+        <div class="contact-title">
+          Fill out the form and we'll be in touch as soon as
+          possible
+        </div>
+        <form>
+          <div class="name">
+            <input type="input" id="firstName" value="First name">
+            <input type="input" id="lastName" value="Last name">
+          </div>
+          <div class="contact-info">
+            <input type="input" id="number" value="Number">
+            <input type="email" id="email" value="Email">
+          </div>
+          <div class="other-info">
+            <div class="select-wrapper">
+              <select name="budget" id="budget">
+                <option selected value="Budget"><strong>Budget</strong></option>
+              </select>
+              <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <div class="select-wrapper">
+              <select name="country" id="country">
+                <option selected value="Country"><strong>Country</strong></option>
+              </select>
+              <i class="fa-solid fa-angle-down"></i>
+            </div>
+          </div>
+          <div class="tell-us-more">
+            <textarea 
+              name="tell us more" 
+              id="tellUsMore" 
+              cols="30" 
+              rows="6"
+              >Tell us more about your project, needs, and timeline, please...
+            </textarea>
+          </div>
+          <div class="form-footer">
+            <div class="checkbox">
+              <input type="checkbox" id="agreement" nam="agreement">
+            </div>
+            <div class="agreement">
+              <div class="agreement-statement">
+                Yes, I'd like to receive occasional marketing emails
+                from Front. I have the right to opt out at any time.
+              </div>
+              <div class="policies">
+                <div>View front policies</div>
+                <div>View privacy policy</div>
+              </div>
+            </div>
+          </div>
+          <div class="submit-wrapper">
+            <div class="btn-primary btn-play submit">
+              <div>Submit</div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
