Footer Top Setup
Set up contents of contact, and options in top part of footer section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </div>
           </div>
           <div class="start-banner">
-            <img src="./saas-project-assets/banners/banner_one.jpg" alt="software options">
+            <img src="./saas-project-assets/banners/banner_one.jpg" alt="software">
           </div>
         </div>
       </section>
@@ -422,6 +422,68 @@
             </div>
           </div>
         </form>
+      </div>
+    </section>
+    <section class="footer container">
+      <div class="footer-top">
+        <div class="contact">
+          <div class="company-logo">
+            <img src="./saas-project-assets/project_logo/logo.svg" alt="Front Logo">
+          </div>
+          <div class="address">
+            <i class="fa-solid fa-location-arrow"></i>
+            <div>153 WIlliamson Plaza, Maggieberg</div>
+          </div>
+          <div class="phone">
+            <i class="fa-solid fa-phone"></i>
+            <div class="active">+1 (062) 109-9222</div>
+          </div>
+        </div>
+        <div class="options-column">
+          <div class="options-header">Company</div>
+          <div class="options-rows">
+            <div>About</div>
+            <div>
+              <div>Career</div>
+              <div class="active">We're hiring</div>
+            </div>
+            <div>Blog</div>
+            <div>Customers</div>
+            <div>Hire us</div>
+          </div>
+        </div>
+        <div class="options-column">
+          <div class="options-header">Features</div>
+          <div class="options-rows">
+            <div>Press</div>
+            <div class="active">Release notes</div>
+            <div>Integrations</div>
+            <div>Pricing</div>
+          </div>
+        </div>
+        <div class="options-column">
+          <div class="options-header">Documentation</div>
+          <div class="options-rows">
+            <div>Support</div>
+            <div>Docs</div>
+            <div>Status</div>
+            <div>API Reference</div>
+            <div>Tech Requirements</div>
+          </div>
+        </div>
+        <div class="options-column">
+          <div class="options-header">Resources</div>
+          <div class="options-rows">
+            <div>
+              <i class="fa-solid fa-circle-info"></i>
+              <div>About</div>
+            </div>
+            <div>
+              <i class="fa-solid fa-circle-user"></i>
+              <div>Your Account</div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
