--- a/index.html
+++ b/index.html
@@ -380,13 +380,13 @@
           </div>
           <div class="other-info">
             <div class="select-wrapper">
-              <select name="budget" id="budget">
+              <select class="form-select" name="budget" id="budget">
                 <option selected value="Budget"><strong>Budget</strong></option>
               </select>
               <i class="fa-solid fa-angle-down"></i>
             </div>
             <div class="select-wrapper">
-              <select name="country" id="country">
+              <select  class="form-select" name="country" id="country">
                 <option selected value="Country"><strong>Country</strong></option>
               </select>
               <i class="fa-solid fa-angle-down"></i>
@@ -431,11 +431,11 @@
             <img src="./saas-project-assets/project_logo/logo.svg" alt="Front Logo">
           </div>
           <div class="address">
-            <i class="fa-solid fa-location-arrow"></i>
+            <i class="fa-solid fa-location-arrow fa-xs"></i>
             <div>153 WIlliamson Plaza, Maggieberg</div>
           </div>
           <div class="phone">
-            <i class="fa-solid fa-phone"></i>
+            <i class="fa-solid fa-phone fa-xs"></i>
             <div class="active">+1 (062) 109-9222</div>
           </div>
         </div>
@@ -445,7 +445,7 @@
             <div>About</div>
             <div>
               <div>Career</div>
-              <div class="active">We're hiring</div>
+              <div class="hiring">We're hiring</div>
             </div>
             <div>Blog</div>
             <div>Customers</div>
@@ -474,15 +474,52 @@
         <div class="options-column">
           <div class="options-header">Resources</div>
           <div class="options-rows">
-            <div>
-              <i class="fa-solid fa-circle-info"></i>
+            <div class="icon-row">
+              <i class="fa-solid fa-circle-info fa-sm"></i>
               <div>About</div>
             </div>
-            <div>
-              <i class="fa-solid fa-circle-user"></i>
+            <div class="icon-row">
+              <i class="fa-solid fa-circle-user fa-sm"></i>
               <div>Your Account</div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="actions-row">
+          <div class="actions-left">
+            Privacy & Policy > <span class="active">Terms </span> > Site Map
+          </div>
+          <div class="actions-right">
+            <div class="btn-media">
+              <i class="fa-brands fa-facebook-f"></i>
+            </div>
+            <div class="btn-media">
+              <i class="fa-brands fa-google"></i>
+            </div>
+            <div class="btn-media">
+              <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="btn-media">
+              <i class="fa-brands fa-github"></i>
+            </div>
+            <div class="actions-select-wrapper">
+              <i class="fa-solid fa-flag-usa"></i>
+              <select class="actions-select" name="states" id="states">
+                <option selected value="Budget"><strong>United States</strong></option>
+              </select>
+              <i class="fa-solid fa-angle-down"></i>
+            </div>
+          </div>
+        </div>
+        <div class="copyright-row">
+          <i class="fa-regular fa-copyright fa-xs"></i>
+          <div>Front. 2022 Responsive designs. All rights reserved.</div>
+        </div>
+        <div class="disclaimer-row">
+          When you visit or interact with our sites, services or tools, we or our authorized service providers may
+          use cookies for storing information to help provide you with a better, faster, and safer experience, and 
+          for marketing purposes.
         </div>
       </div>
     </section>
