--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <!-- fontawesome icons -->
     <script src="https://kit.fontawesome.com/3f58ffeeb4.js" crossorigin="anonymous"></script>
   </head>
-  <body>
-      <div class="top-nav container">
+  <body id="pageTop">
+      <div id="topNav" class="top-nav container">
         <div class="company-logo">
           <img src="./saas-project-assets/project_logo/logo.svg" alt="Front Logo">
         </div>
@@ -523,5 +523,20 @@
         </div>
       </div>
     </section>
+
+    <a href="#pageTop" id="scrollUp">
+      <i class="fa-solid fa-angle-up fa-lg"></i>
+    </a>
+
+    <script>
+      const nav = document.getElementById("topNav");
+      window.onscroll = function () {
+        if (window.pageYOffset > 100) {
+          nav.classList.add('sticky');
+        } else {
+          nav.classList.remove('sticky');
+        }
+      }
+    </script>
   </body>
 </html>
