--- a/index.html
+++ b/index.html
@@ -23,12 +23,21 @@
     <script src="https://kit.fontawesome.com/3f58ffeeb4.js" crossorigin="anonymous"></script>
   </head>
   <body id="pageTop">
+    <div class="top-background">
+      <svg height="100%" width="100%">
+        <polygon points="0,0 0,700 1000,550 1280,0" style="fill: var(--default-background);" />
+        <polygon points="1450,0 1280,0 1000,550 1450,480" style="fill:var(--section-background)" />
+      </svg>
+    </div>
       <div id="topNav" class="top-nav container">
         <div class="company-logo">
           <img src="./saas-project-assets/project_logo/logo.svg" alt="Front Logo">
         </div>
         <div class="nav-wrapper">
           <nav>
+            <button class="navbar-toggler" aria-expanded="false" aria-controls="navbarDropdown">
+              <span>&#9776;</span>
+            </button>
             <ul>
               <li>Home</li>
               <li>Features</li>
@@ -537,6 +546,16 @@
           nav.classList.remove('sticky');
         }
       }
+
+      //toggle nav menu
+      const navBtn = document.querySelector('button[aria-expanded]');
+      
+      function toggleNav({ target }) {
+        const expanded = target.getAttribute('aria-expanded') === 'true' || false;
+        navBtn.setAttribute('aria-expanded', !expanded);
+      }
+
+      navBtn.addEventListener('click', toggleNav);
     </script>
   </body>
 </html>
