--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <body id="pageTop">
     <div class="top-background">
       <svg height="100%" width="100%">
-        <polygon points="0,0 0,700 1000,550 1280,0" style="fill: var(--default-background);" />
-        <polygon points="1450,0 1280,0 1000,550 1450,480" style="fill:var(--section-background)" />
+        <polygon points="0,0 0,700 1000,550 1280,0" style="fill: var(--section-background);" />
+        <polygon points="1450,0 1280,0 1000,550 1450,480" style="fill:var(--dark-background)" />
       </svg>
     </div>
       <div id="topNav" class="top-nav container">
@@ -197,28 +197,24 @@
           <div class="why-components">
             <div class="why-component">
               <div class="why-graphic">
-                <!-- <div class="why-graphic-dot">&#8226;</div> -->
                 <i class="fas fa-circle fa-2xs"></i>
               </div>
               <div class="why-name">Basic Elements</div>
             </div>
             <div class="why-component">
               <div class="why-graphic">
-                <!-- <div class="why-graphic-dot">&#8226;</div> -->
                 <i class="fas fa-circle fa-2xs"></i>
               </div>
               <div class="why-name">Components</div>
             </div>
             <div class="why-component">
               <div class="why-graphic">
-                <!-- <div class="why-graphic-dot">&#8226;</div> -->
                 <i class="fas fa-circle fa-2xs"></i>
               </div>
               <div class="why-name">Combined Components</div>
             </div>
             <div class="why-component">
               <div class="why-graphic">
-                <!-- <div class="why-graphic-dot">&#8226;</div> -->
                 <i class="fas fa-circle fa-2xs"></i>
               </div>
               <div class="why-name">Page Layouts</div>
@@ -354,23 +350,27 @@
       </section>
     <section class="hire-section">
       <div class="hire-testimonial">
-        <div class="hire-title">Hire Us</div>
-        <div class="hire-motto">
-          Whatever your goal - 
-          we will get you there
+        <div>
+          <div class="hire-title">Hire Us</div>
+          <div class="hire-motto">
+            Whatever your goal -
+            we will get you there
+          </div>
+          <div class="hire-quote">
+            <em>
+              "I love front! I love the ease of use, I love the
+              fact that I have total creative freedom..."
+            </em>
+          </div>
         </div>
-        <div class="hire-quote">
-          <em>
-            "I love front! I love the ease of use, I love the
-            fact that I have total creative freedom..."
-          </em>
-        </div>
-        <div class="hire-signature">Charlotte Moore</div>
-        <div class="hire-position">Head of Commercials, Slack</div>
-        <div class="hire-people">
-          <img src="./saas-project-assets/people/woman_one.jpg" alt="woman one">
-          <img src="./saas-project-assets/people/woman_two.jpg" alt="woman two">
-          <img src="./saas-project-assets/people/man_one.jpg" alt="man one">
+        <div>
+          <div class="hire-signature">Charlotte Moore</div>
+          <div class="hire-position">Head of Commercials, Slack</div>
+          <div class="hire-people">
+            <img src="./saas-project-assets/people/woman_one.jpg" alt="woman one">
+            <img src="./saas-project-assets/people/woman_two.jpg" alt="woman two">
+            <img src="./saas-project-assets/people/man_one.jpg" alt="man one">
+          </div>
         </div>
       </div>
       <div class="contact-us">
@@ -448,48 +448,50 @@
             <div class="active">+1 (062) 109-9222</div>
           </div>
         </div>
-        <div class="options-column">
-          <div class="options-header">Company</div>
-          <div class="options-rows">
-            <div>About</div>
-            <div>
-              <div>Career</div>
-              <div class="hiring">We're hiring</div>
-            </div>
-            <div>Blog</div>
-            <div>Customers</div>
-            <div>Hire us</div>
-          </div>
-        </div>
-        <div class="options-column">
-          <div class="options-header">Features</div>
-          <div class="options-rows">
-            <div>Press</div>
-            <div class="active">Release notes</div>
-            <div>Integrations</div>
-            <div>Pricing</div>
-          </div>
-        </div>
-        <div class="options-column">
-          <div class="options-header">Documentation</div>
-          <div class="options-rows">
-            <div>Support</div>
-            <div>Docs</div>
-            <div>Status</div>
-            <div>API Reference</div>
-            <div>Tech Requirements</div>
-          </div>
-        </div>
-        <div class="options-column">
-          <div class="options-header">Resources</div>
-          <div class="options-rows">
-            <div class="icon-row">
-              <i class="fa-solid fa-circle-info fa-sm"></i>
+        <div class="options-column-wrapper">
+          <div class="options-column">
+            <div class="options-header">Company</div>
+            <div class="options-rows">
               <div>About</div>
+              <div>
+                <div>Career</div>
+                <div class="hiring">We're hiring</div>
+              </div>
+              <div>Blog</div>
+              <div>Customers</div>
+              <div>Hire us</div>
             </div>
-            <div class="icon-row">
-              <i class="fa-solid fa-circle-user fa-sm"></i>
-              <div>Your Account</div>
+          </div>
+          <div class="options-column">
+            <div class="options-header">Features</div>
+            <div class="options-rows">
+              <div>Press</div>
+              <div class="active">Release notes</div>
+              <div>Integrations</div>
+              <div>Pricing</div>
+            </div>
+          </div>
+          <div class="options-column">
+            <div class="options-header">Documentation</div>
+            <div class="options-rows">
+              <div>Support</div>
+              <div>Docs</div>
+              <div>Status</div>
+              <div>API Reference</div>
+              <div>Tech Requirements</div>
+            </div>
+          </div>
+          <div class="options-column">
+            <div class="options-header">Resources</div>
+            <div class="options-rows">
+              <div class="icon-row">
+                <i class="fa-solid fa-circle-info fa-sm"></i>
+                <div>About</div>
+              </div>
+              <div class="icon-row">
+                <i class="fa-solid fa-circle-user fa-sm"></i>
+                <div>Your Account</div>
+              </div>
             </div>
           </div>
         </div>
@@ -500,17 +502,19 @@
             Privacy & Policy > <span class="active">Terms </span> > Site Map
           </div>
           <div class="actions-right">
-            <div class="btn-media">
-              <i class="fa-brands fa-facebook-f"></i>
-            </div>
-            <div class="btn-media">
-              <i class="fa-brands fa-google"></i>
-            </div>
-            <div class="btn-media">
-              <i class="fa-brands fa-twitter"></i>
-            </div>
-            <div class="btn-media">
-              <i class="fa-brands fa-github"></i>
+            <div class="btn-media-wrapper">
+              <div class="btn-media">
+                <i class="fa-brands fa-facebook-f"></i>
+              </div>
+              <div class="btn-media">
+                <i class="fa-brands fa-google"></i>
+              </div>
+              <div class="btn-media">
+                <i class="fa-brands fa-twitter"></i>
+              </div>
+              <div class="btn-media">
+                <i class="fa-brands fa-github"></i>
+              </div>
             </div>
             <div class="actions-select-wrapper">
               <i class="fa-solid fa-flag-usa"></i>
@@ -522,8 +526,10 @@
           </div>
         </div>
         <div class="copyright-row">
-          <i class="fa-regular fa-copyright fa-xs"></i>
-          <div>Front. 2022 Responsive designs. All rights reserved.</div>
+          <div>
+            <span><i class="fa-regular fa-copyright fa-xs"></i></span>
+            Front. 2022 Responsive designs. All rights reserved.
+          </div>
         </div>
         <div class="disclaimer-row">
           When you visit or interact with our sites, services or tools, we or our authorized service providers may
