media queries and fix svg background top

--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
     <script src="https://kit.fontawesome.com/3f58ffeeb4.js" crossorigin="anonymous"></script>
   </head>
   <body id="pageTop">
-    <div class="top-background">
-      <svg height="100%" width="100%">
-        <polygon points="0,0 0,700 1000,550 1280,0" style="fill: var(--section-background);" />
-        <polygon points="1650,0 1280,0 1000,550 1650,480" style="fill:var(--dark-background)" />
-      </svg>
-    </div>
+    <div class="top-background"></div>
       <div id="topNav" class="top-nav container">
         <div class="company-logo">
           <img src="./saas-project-assets/project_logo/logo.svg" alt="Front Logo">
